# geo-grouper

./: .env.example  .gitignore  Makefile  README.md  poc_script.py  pyproject.toml
geo_grouper/: app.py  file_utils.py  geocode_vendors.py  grouper.py  models.py  routes.py  settings.py
static/: index.html  main.js  styles.css
tests/: test_grouper.py
